--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ SET(CMAKE_CXX_FLAGS "-Wl,-ld_classic")
 add_executable(w1a1 "week1-check-lms-for-introduction-ppt.cpp")
 add_executable(w2a1 "week2-app1.cpp")
 add_executable(w2a2 "week2-app2.cpp")
+add_executable(w3a1 "week3-app1.cpp")
+add_executable(w3a2 "week3-app2.cpp")
