--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,6 @@ add_executable(w2a1 "week2-app1.cpp")
 add_executable(w2a2 "week2-app2.cpp")
 add_executable(w3a1 "week3-app1.cpp")
 add_executable(w3a2 "week3-app2.cpp")
+add_executable(w4a1 "week4-app1.cpp")
+add_executable(w4a2 "week4-app2.cpp")
+add_executable(w4a3 "week4-app3.cpp")
