--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(w3a2 "week3-app2.cpp")
 add_executable(w4a1 "week4-app1.cpp")
 add_executable(w4a2 "week4-app2.cpp")
 add_executable(w4a3 "week4-app3.cpp")
+add_executable(w5a1 "week5-app1.cpp")
+add_executable(w5a2 "week5-app2.cpp")
