--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,5 @@ add_executable(w4a2 "week4-app2.cpp")
 add_executable(w4a3 "week4-app3.cpp")
 add_executable(w5a1 "week5-app1.cpp")
 add_executable(w5a2 "week5-app2.cpp")
+add_executable(w6a1 "week6-app1.cpp")
+add_executable(w6a2 "week6-app2.cpp")
