--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,6 @@ add_executable(w5a1 "week5-app1.cpp")
 add_executable(w5a2 "week5-app2.cpp")
 add_executable(w6a1 "week6-app1.cpp")
 add_executable(w6a2 "week6-app2.cpp")
+add_executable(w7a1 "week7-app1.cpp")
+add_executable(w7a2 "week7-app2.cpp")
+add_executable(w7a3 "week7-app3.cpp")
