--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,6 @@ add_executable(w6a2 "week6-app2.cpp")
 add_executable(w7a1 "week7-app1.cpp")
 add_executable(w7a2 "week7-app2.cpp")
 add_executable(w7a3 "week7-app3.cpp")
+add_executable(w8a1 "week8-app1.cpp")
+add_executable(w8a2 "week8-app2.cpp")
+add_executable(w8a3 "week8-app3.cpp")
