--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,6 @@ add_executable(w7a3 "week7-app3.cpp")
 add_executable(w8a1 "week8-app1.cpp")
 add_executable(w8a2 "week8-app2.cpp")
 add_executable(w8a3 "week8-app3.cpp")
+add_executable(w9a1 "week9-app1.cpp")
+add_executable(w9a2 "week9-app2.cpp")
+add_executable(w9a3 "week9-app3.cpp")
