--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,5 @@ add_executable(w8a3 "week8-app3.cpp")
 add_executable(w9a1 "week9-app1.cpp")
 add_executable(w9a2 "week9-app2.cpp")
 add_executable(w9a3 "week9-app3.cpp")
-add_executable(mt1 "mt1_preparation.cpp")
+add_executable(mt1_prep "mt1_preparation.cpp")
+add_executable(mt1 "mt1.cpp")
