--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,6 @@ add_executable(w9a1 "week9-app1.cpp")
 add_executable(w9a2 "week9-app2.cpp")
 add_executable(w9a3 "week9-app3.cpp")
 add_executable(mt1_prep "mt1_preparation.cpp")
-add_executable(mt1 "mt1.cpp")
+add_executable(mt1_19 "mt1_19semicolon.cpp")
+add_executable(mt1_22 "mt1_22semicolon.cpp")
+add_executable(mt1_28 "mt1_28semicolon.cpp")
