--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,10 @@ add_executable(w13a1 "week13-app1.cpp")
 add_executable(w13a2 "week13-app2.cpp")
 add_executable(w13a3 "week13-app3.cpp")
 add_executable(w13a4 "week13-app4.cpp")
+add_executable(w14a1 "week14-app1.cpp")
+add_executable(w14a2 "week14-app2.cpp")
+add_executable(w14a3 "week14-app3.cpp")
+add_executable(w14a4 "week14-app4.cpp")
+add_executable(w14a5 "week14-app5.cpp")
+add_executable(w14a6 "week14-app6.cpp")
+add_executable(w14a7 "week14-app7.cpp")
