--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,11 @@ add_executable(w14a4 "week14-app4.cpp")
 add_executable(w14a5 "week14-app5.cpp")
 add_executable(w14a6 "week14-app6.cpp")
 add_executable(w14a7 "week14-app7.cpp")
+add_executable(w15a1 "week15-app1.cpp")
+add_executable(w15a2 "week15-app2.cpp")
+add_executable(w15a3 "week15-app3.cpp")
+add_executable(w15a4 "week15-app4.cpp")
+add_executable(w15a5 "week15-app5.cpp")
+add_executable(w15a6 "week15-app6.cpp")
+add_executable(w15a7 "week15-app7.cpp")
+add_executable(w15a8 "week15-app8.cpp")
